--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
             document.cookie = `username=${username}`;
             document.cookie = `password=${password}`;
             document.cookie = `sessionId=${res.json.sessionId}`;
-            window.location = '/index.html';
+            window.location = 'index.html';
           }
         }
         form.classList.add('was-validated');
