--- a/login.html
+++ b/login.html
@@ -50,9 +50,9 @@
         {
           const res = await auth(username, password);
           if (res.status == 200) {
-            document.cookie = `username=${username}`;
-            document.cookie = `password=${password}`;
-            document.cookie = `sessionId=${res.json.sessionId}; max-age=31536000`;
+            document.cookie = `username=${username}; max-age=31536000`;
+            document.cookie = `password=${password}; max-age=31536000`;
+            document.cookie = `sessionId=${res.json.sessionId}; max-age=604800`;
             window.location = 'index.html';
           }
         }
